--- a/calculator.css
+++ b/calculator.css
@@ -21,6 +21,8 @@ padding: 10px;
 width:70%;
 max-width: 400px;
 color: cornsilk;
+justify-content: center;
+
 
 }
 
@@ -30,6 +32,7 @@ color: cornsilk;
   width:50px;
   padding: 2px 4px;
   margin:5px 10px;
+
 
 }
 
@@ -59,7 +62,7 @@ font-size: medium;
 padding: 5px 15px;
 border-radius: 10px;
 border: 1px solid rgb(195, 221, 46);
-margin: 5px 10px 5px 10px;
+margin: 5px 10px 15px 10px;
 }
 
 .BMIcategories{
@@ -72,10 +75,11 @@ font-weight: bold;
 
 /*grid testing*/
 
-    .form-group{
+    .card-body{
         display: grid;
         grid-template-columns: repeat (auto-fit minmax (900px,3 fr));
-        grid-column: 3,7;
+        grid-column: 3;
+        grid-row:3;
     }
 
         .input{
@@ -95,20 +99,16 @@ font-weight: bold;
 
     /*grid testing*/
     
-    .form-group{
+    .card-body{
         display:grid;
-        grid-template-columns: 33.3% 33.3% 33.3%;
-        grid-column: 5/6;
-        grid-row: 2/3;
-        grid-template-columns: 1fr 1fr 1fr ;
+        grid-template-columns: repeat (3, 1fr);
+        grid-row:3;
+       
     }
-
+   
     .button{
     margin-left:50%;
     }
 
-    .input{
-        grid-template-columns: repeat (auto-fit minmax (900px,3 fr));
-    }
-
+    
    
