--- a/calculator.css
+++ b/calculator.css
@@ -52,7 +52,7 @@ body{
     border-radius: 10px;
     border: none;
     color: whitesmoke;
-    width:30%;
+    width:20%;
     
 }
 
@@ -69,7 +69,7 @@ body{
     padding: 5px 15px;
     border-radius: 10px;
     border: 1px solid rgb(195, 221, 46);
-    margin-top:40px;
+    margin-bottom:40px;
 }
 
 .BMIcategories{
@@ -101,6 +101,7 @@ body{
         font-size: small;
     }
     
+    
 }
 
 /*implementing media screen for tablet*/
@@ -111,13 +112,12 @@ body{
     }
     
     .container{
-        width: 80%;
         text-align: center;
+        width:70%
     }
     
     .footer, .moreinfo, .full, .form-group, .header, .input{
         font-size:x-large;
-        marf
     }
     
     .card{
@@ -125,9 +125,12 @@ body{
     }
 
     .moreinfo{
-        margin-top:160px;
+        margin-top:75px;
     }
     
+    .input{
+        width:80px;
+    }
 }
 
 /*implementing media screen for laptop*/
@@ -135,13 +138,9 @@ body{
     
     .header{
         margin-top: 30px;
+        font-size:35px;
     }
     
-    .container{
-        width: 80%;
-    }
-    
-    
-    
+    .
 }
 
